--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,5 +1,9 @@
 <% @users.each do |user| %>
+  <% if @current_page == 'liked_users' %>
+  <li class="col-12">
+  <%else%>
   <li class="col-md-6 col-sm-12">
+  <% end %>
     <div class="user-container">
       <% if user.image.present? %>
         <p class="img"><%= image_tag user.image_url(:thumb200) %></p>
